[package]
name = "geohasher"
version = "0.1.0"
edition = "2021"
authors = ["Conor Brady <con.brad@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/conbrad/geohasher"
keywords = ["geohash", "geospatial", "gis"]
categories = ["algorithms", "geospatial"]

[lib]
name = "geohasher"

[dependencies]
