[package]
name = "geohasher"
version = "0.1.4"
description = "Simple geohash encode/decode functions without any dependencies."
documentation = "https://docs.rs/geohasher/"
edition = "2021"
authors = ["Conor Brady <con.brad@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/conbrad/geohasher"
keywords = ["geohash", "geospatial", "gis"]
categories = ["algorithms", "science::geo"]

[lib]
name = "geohasher"

[dependencies]
